--- a/tests/fixtures/my.cnf.tmpl
+++ b/tests/fixtures/my.cnf.tmpl
@@ -7,12 +7,12 @@ port = {port}
 host = {host}
 password = {password}
 database = {db}
-socket = /var/run/mysqld/mysqld.sock
+socket = {unix_socket}
 default-character-set = utf8
 
 [client_with_unix_socket]
 user = {user}
 password = {password}
 database = {db}
-socket = /var/run/mysqld/mysqld.sock
+socket = {unix_socket}
 default-character-set = utf8
